[gd_scene load_steps=10 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://signinPage/signinPage.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 64
font_data = ExtResource( 1 )

[node name="SigninPage" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Message" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -178.5
margin_top = 100.0
margin_right = 178.5
margin_bottom = 178.0
custom_fonts/font = SubResource( 1 )
text = "Trivial War"
align = 1

[node name="UserName" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 23.0
margin_top = 87.0
margin_right = 231.0
margin_bottom = 127.0
custom_fonts/font = SubResource( 2 )

[node name="PassWord" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 30.0
margin_top = -634.0
margin_right = 236.0
margin_bottom = -594.0
custom_fonts/font = SubResource( 2 )

[node name="username" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -184.0
margin_top = 80.5
margin_right = -37.0
margin_bottom = 129.5
custom_fonts/font = SubResource( 3 )
text = "NAME:"

[node name="password" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -261.0
margin_top = -642.0
margin_right = 15.0
margin_bottom = -593.0
custom_fonts/font = SubResource( 4 )
text = "PASSWORD:"

[node name="Notification" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -278.0
margin_top = -201.5
margin_right = 278.0
margin_bottom = -152.5
custom_fonts/font = SubResource( 5 )
text = "please create your account"

[node name="ConfirmButton" type="Button" parent="."]
margin_left = 158.0
margin_top = 1494.0
margin_right = 500.0
margin_bottom = 1578.0
custom_fonts/font = SubResource( 6 )
text = "CONFIRM"

[node name="BackButton" type="Button" parent="."]
margin_left = 644.0
margin_top = 1494.0
margin_right = 900.0
margin_bottom = 1578.0
custom_fonts/font = SubResource( 7 )
text = "BACK"

[connection signal="pressed" from="ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
